<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single"
        android:id="@+id/menu">
        <item
            android:icon="@android:drawable/ic_menu_add"
            android:id="@+id/add_new"
            android:title="Dodaj nowy język" />
    <item
        android:icon="@drawable/flag_eng"
        android:id="@+id/flag_eng"
        android:title="@string/english"
        android:visible="false"/>
    <item
        android:id="@+id/flag_bel"
        android:icon="@drawable/flag_bel"
        android:title="@string/belarusian"
        android:visible="false"/>
    <item
        android:title="Български"
        android:id="@+id/flag_bul"
        android:icon="@drawable/flag_bul"
        android:visible="false"/>
    <item
        android:icon="@drawable/flag_bos"
        android:id="@+id/flag_bos"
        android:title="@string/bosnian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_cze"
        android:icon="@drawable/flag_cze"
        android:title="@string/czech"
        android:visible="false"/>
    <item
        android:id="@+id/flag_den"
        android:icon="@drawable/flag_den"
        android:title="@string/danish"
        android:visible="false"/>
    <item
        android:id="@+id/flag_ger"
        android:icon="@drawable/flag_ger"
        android:title="@string/german"
        android:visible="false"/>
    <item
        android:id="@+id/flag_est"
        android:icon="@drawable/flag_est"
        android:title="@string/estonian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_gre"
        android:icon="@drawable/flag_gre"
        android:title="@string/greek"
        android:visible="false"/>
    <item
        android:id="@+id/flag_spa"
        android:icon="@drawable/flag_spa"
        android:title="@string/spanish"
        android:visible="false"/>
    <item
        android:id="@+id/flag_fra"
        android:icon="@drawable/flag_fra"
        android:title="@string/french"
        android:visible="false"/>
    <item
        android:id="@+id/flag_cro"
        android:icon="@drawable/flag_cro"
        android:title="@string/croatian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_ita"
        android:icon="@drawable/flag_ita"
        android:title="@string/italian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_ice"
        android:icon="@drawable/flag_ice"
        android:title="@string/icelandic"
        android:visible="false"/>
    <item
        android:id="@+id/flag_lat"
        android:icon="@drawable/flag_lat"
        android:title="@string/latvian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_lit"
        android:icon="@drawable/flag_lit"
        android:title="@string/lithuanian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_hun"
        android:icon="@drawable/flag_hun"
        android:title="@string/hungarian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_mal"
        android:icon="@drawable/flag_mal"
        android:title="@string/maltese"
        android:visible="false"/>
    <item
        android:id="@+id/flag_mac"
        android:icon="@drawable/flag_mac"
        android:title="@string/macedonian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_net"
        android:icon="@drawable/flag_net"
        android:title="@string/dutch"
        android:visible="false"/>
    <item
        android:id="@+id/flag_nor"
        android:icon="@drawable/flag_nor"
        android:title="@string/norwegian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_pol"
        android:icon="@drawable/flag_pol"
        android:title="@string/polish"
        android:visible="false"/>
    <item
        android:id="@+id/flag_por"
        android:icon="@drawable/flag_por"
        android:title="@string/portuguese"
        android:visible="false"/>
    <item
        android:id="@+id/flag_rom"
        android:icon="@drawable/flag_rom"
        android:title="@string/romanian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_rus"
        android:icon="@drawable/flag_rus"
        android:title="@string/russian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_alb"
        android:icon="@drawable/flag_alb"
        android:title="@string/albanian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_svk"
        android:icon="@drawable/flag_svk"
        android:title="@string/slovak"
        android:visible="false"/>
    <item
        android:id="@+id/flag_slo"
        android:icon="@drawable/flag_slo"
        android:title="@string/slovenian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_ser"
        android:icon="@drawable/flag_ser"
        android:title="@string/serbian"
        android:visible="false"/>
    <item
        android:id="@+id/flag_fin"
        android:icon="@drawable/flag_fin"
        android:title="@string/finnish"
        android:visible="false"/>
    <item
        android:id="@+id/flag_swe"
        android:icon="@drawable/flag_swe"
        android:title="@string/swedish"
        android:visible="false"/>
    <item
        android:id="@+id/flag_ukr"
        android:icon="@drawable/flag_ukr"
        android:title="@string/ukrainian"
        android:visible="false"/>

        <item
            android:id="@+id/another"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="Inne"
            android:visible="false" />
    </group>
</menu>